--- a/CSS-Stylesheet-Startseite.css
+++ b/CSS-Stylesheet-Startseite.css
@@ -229,5 +229,11 @@ header {
             margin: 0 0 4vh 0;
         }
     }
+
+    @media(max-width:450px){
+        .logo{
+            height: 75%;
+        }
+    }
     
 
