--- a/CSS-Stylesheet-Startseite.css
+++ b/CSS-Stylesheet-Startseite.css
@@ -130,7 +130,7 @@ header {
        
     @media(max-width: 450px){
         .logo-header{
-            min-height: 50px;
+            min-height: 0;
             height: 5vw;
         }
         .burger-menü-button{
