--- a/CSS-Stylesheet-Startseite.css
+++ b/CSS-Stylesheet-Startseite.css
@@ -128,10 +128,10 @@ header {
         }
        } 
        
-    @media(max-width: 450px){
+    @media(max-width: 500px){
         .logo-header{
             min-height: 0;
-            height: 5vw;
+            height: 10px;
         }
         .burger-menü-button{
             height: 15vh;
