--- a/CSS-Stylesheet-Infos.css
+++ b/CSS-Stylesheet-Infos.css
@@ -106,3 +106,9 @@
             margin: 0.5vh 4vw 0.5vh 4vw;
         }
     }
+
+    @media(max-width:500px){
+        .card{
+            width: 65vw;
+        }
+    }
