--- a/CSS-Stylesheet-Bands.css
+++ b/CSS-Stylesheet-Bands.css
@@ -98,4 +98,9 @@
             width: 50vw;
         }
     }
+    @media(max-width:500px){
+        .band-foto{
+            width: 65vw;
+        }
+    }
     
