--- a/CSS-Stylesheet-Startseite.css
+++ b/CSS-Stylesheet-Startseite.css
@@ -236,9 +236,9 @@ header {
         }
     }
 
-    @media(max-width:450px){
+    @media(max-width:500px){
         .logo{
-            height: 10vh;
+            width: 75vw;
         }
     }
     
