--- a/CSS-Stylesheet-Startseite.css
+++ b/CSS-Stylesheet-Startseite.css
@@ -140,7 +140,10 @@ header {
             font-size: 2.5vw;
         }
         .burger-menü-button{
-            height: 5vh;
+            height: 4vh;
+        }
+        .header{
+            padding: 0 10vw 0 10vw;
         }
     }
     }
