--- a/CSS-Stylesheet-Infos.css
+++ b/CSS-Stylesheet-Infos.css
@@ -38,6 +38,7 @@
         .karte-überschrift{
             font-size: clamp(1.3rem, 2.5vw, 2.5rem);
             margin: 1vw 1vw 0.5vh 1vw;
+            text-align: center;
         }
         .karte-text{
             font-size: clamp(0.8rem, 1.8vw, 2rem);
