--- a/CSS-Stylesheet-Startseite.css
+++ b/CSS-Stylesheet-Startseite.css
@@ -140,7 +140,7 @@ header {
             font-size: 2.5vw;
         }
         .burger-menü-button{
-            height: 4vh;
+            width: 4vw;
         }
         .header{
             padding: 0 10vw 0 10vw;
