--- a/CSS-Stylesheet-Startseite.css
+++ b/CSS-Stylesheet-Startseite.css
@@ -243,6 +243,12 @@ header {
         .logo{
             width: 75vw;
         }
+        .datum-1{
+            font-size: 20vw;
+        }
+        .datum-2{
+            font-size: 15vw;
+        }
     }
     
 
