--- a/CSS-Stylesheet-Startseite.css
+++ b/CSS-Stylesheet-Startseite.css
@@ -112,9 +112,7 @@ header {
         }
     @media(max-width: 1500px){
        .logo-header{
-        min-height: 60px;
-        height:7.5vw;
-      
+        width: 40vw;
        }
         .datum-header-jahr{
         font-size: 4.5vw;
@@ -129,10 +127,6 @@ header {
        } 
        
     @media(max-width: 500px){
-        .logo-header{
-            min-height: 0px;
-            height: 6vh;
-        }
         .datum-header-jahr{
             font-size: 3.5vw;
         }
@@ -244,10 +238,10 @@ header {
             width: 75vw;
         }
         .datum-1{
-            font-size: 20vw;
+            font-size: 15vw;
         }
         .datum-2{
-            font-size: 15vw;
+            font-size: 13vw;
         }
     }
     
