TEx-tFarben durch main-color-1/2 ausgetauscht

--- a/CSS-Stylesheet-General.css
+++ b/CSS-Stylesheet-General.css
@@ -28,6 +28,13 @@ html{
         color: #F5BD00;
     }
 
+    .main-color-1{
+        color: #7400BE;
+    }
+
+    .main-color-2{
+        color: #F5BD00;
+    }
 /*Titles*/
     h3{
         font-size: 3rem;
