--- a/CSS-Stylesheet-General.css
+++ b/CSS-Stylesheet-General.css
@@ -21,6 +21,20 @@ html{
         font-style: normal;
         }
 
+    .logo-font{
+        font-family: "burghi-variable", sans-serif;
+    }
+    .heading-font{
+        font-family: "bebas-neue-rounded", sans-serif;
+        font-weight: 400;
+        font-style: normal;
+    }
+    .text-font{
+        font-family: "bebas-neue-pro", sans-serif;
+        font-weight: 400;
+        font-style: normal;
+    }
+
     .purple{
         color: #7400BE;
     }
