Anderer Bildausschnitt Startseite

--- a/CSS-Stylesheet-Startseite.css
+++ b/CSS-Stylesheet-Startseite.css
@@ -179,7 +179,7 @@ header {
     
     .bild-startseite {
         width: 50%;
-        background-image: url(Images/Bilder-Startseite/Psychedelisches\ Berg-Bild.jpg) ;
+        background-image: url(Images/Bilder-Startseite/Trip.jpg) ;
         background-repeat: no-repeat;
         background-size: cover;
         display: flex;
