--- a/CSS-Stylesheet-Startseite-Subpage.css
+++ b/CSS-Stylesheet-Startseite-Subpage.css
@@ -3,6 +3,7 @@
     background-color: #F5BD00;
     margin-top: 20vh;
     box-shadow: 0px 5px 8px #888888;
+
 }
     .startseite-subpages-flex-container{
         display: flex;
@@ -13,11 +14,13 @@
         gap: 1vh;
     }
     .bild-und-daten-startseite-subpage{
-        height: 60vh;
-        width: 60vh;
+        height: 100%;
+        width: 100%;
         background-image: url(Images/Bilder-Startseite-Subpages/Gruppe\ maskieren\ 7.png);
         background-repeat: no-repeat;
-        background-size: cover;
+       
+        background-position: center;
+        overflow: visible;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -29,3 +32,8 @@
             margin-bottom: 1vh;
         }
     
+        @media(max-width:630px){
+            .startseite-subpages{
+                margin-top: 15vh;
+            }
+        }
