--- a/CSS-Stylesheet-Startseite.css
+++ b/CSS-Stylesheet-Startseite.css
@@ -102,6 +102,9 @@ header {
     .dropdown-extra{
         display: none;
     }
+    .Keinverweis{
+    
+    }
 
     @media(max-width: 1900px){
         .menü-elemente{
