--- a/CSS-Stylesheet-FAQ.css
+++ b/CSS-Stylesheet-FAQ.css
@@ -10,7 +10,7 @@
 }
 
     .frage{
-        width: 72vw;
+        min-width: 72vw;
         border: 3.5px solid #7400BE;
         border-radius: 75px;
         height: fit-content;
