--- a/CSS-Stylesheet-Startseite-Subpage.css
+++ b/CSS-Stylesheet-Startseite-Subpage.css
@@ -1,5 +1,5 @@
 .startseite-subpages{
-    height: 70vh;
+    height: 80vh;
     background-color: #F5BD00;
     margin-top: 20vh;
     box-shadow: 0px 5px 8px #888888;
@@ -14,13 +14,16 @@
         gap: 1vh;
     }
     .bild-und-daten-startseite-subpage{
-        height: 100%;
-        width: 100%;
         background-image: url(Images/Bilder-Startseite-Subpages/Gruppe\ maskieren\ 7.png);
         background-repeat: no-repeat;
+        background-size: contain;
+       
+        height: 80%;
+        width: 80%;
        
         background-position: center;
         overflow: visible;
+
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -32,6 +35,9 @@
             margin-bottom: 1vh;
         }
     
+        .heading-sub-page{
+            margin-top: clamp(-5vw, -2vw, 0);
+        }
         @media(max-width:630px){
             .startseite-subpages{
                 margin-top: 15vh;
