--- a/CSS-Stylesheet-Anreise.css
+++ b/CSS-Stylesheet-Anreise.css
@@ -1,6 +1,5 @@
 .Anreise-Karte{
-    height: 100vh;
-    width: 100vw;
+    max-width: 100%;
 
     background-color: #7400BE;
 
@@ -8,6 +7,9 @@
     justify-content: space-evenly;
     align-items: center;
     flex-direction: column;
+    gap: 5vh;
+    padding: 5vh 0 5vh 0;
+
 }
 
 .Buttons-Karte{
@@ -15,4 +17,45 @@
     justify-content: center;
     align-items: center;
     flex-direction: row;
+}
+
+.Karte{
+    height: 50vh;
+    width: 50vw;
+}
+
+@media(max-width: 1000px){
+    .Karte{
+        height: 40vh;
+        width: 80vw;
+    }
+
+    .Öffentliche-Anreise-Bahnhöfe{
+        flex-direction: column;
+    }
+}
+.Öffentliche-Anreise{
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    flex-direction: column;
+    gap: 5vh;
+    padding: 5vh 13vw 5vh 13vw;
+    background-color: #F5BD00;
+}
+
+.Öffentliche-Anreise-Bahnhöfe{
+    display: flex;
+    justify-content:space-between;
+    align-items: flex-start;
+    flex-direction: row;
+    gap: 5vh;
+}
+.Öffentliche-Anreise-Bahnhof{
+    display: flex;
+    width: 37vw;
+    justify-content: flex-start;
+    align-items: flex-start;
+    flex-direction: column;
+    gap: 2.5vh;
 }
