--- a/CSS-Stylesheet-General.css
+++ b/CSS-Stylesheet-General.css
@@ -49,9 +49,16 @@ html{
     .main-color-2{
         color: #F5BD00;
     }
+
+    .background-color-1{
+        background-color: #7400BE;
+    }
+    .background-color-2{
+        background-color: #F5BD00;
+    }
 /*Titles*/
     h3{
-        font-size: 3rem;
+        font-size: clamp(2rem, 4vw, 3rem);
     }
     h4{
         font-size: clamp(1.3rem, 2.5vw, 2.5rem);
