Impressum Change. Zeltwiese fertig

--- a/CSS-Stylesheet-Impressum.css
+++ b/CSS-Stylesheet-Impressum.css
@@ -25,6 +25,7 @@ footer {
             flex-direction: column;
             align-items: flex-start;
             justify-content: space-around;
+            gap: 2vh;
         }
             .social-links{
                 display: flex;
