Webps statt bildern

--- a/CSS-Stylesheet-Startseite-Subpage.css
+++ b/CSS-Stylesheet-Startseite-Subpage.css
@@ -14,7 +14,7 @@
         gap: 1vh;
     }
     .bild-und-daten-startseite-subpage{
-        background-image: url(Images/Bilder-Startseite-Subpages/Gruppe\ maskieren\ 7.png);
+        background-image: url(Images/Bilder-Startseite-Subpages/Gruppe\ maskieren\ 7.webp);
         background-repeat: no-repeat;
         background-size: contain;
        
