--- a/CSS-Stylesheet-Startseite.css
+++ b/CSS-Stylesheet-Startseite.css
@@ -20,10 +20,11 @@ header {
     .logo-und-datum{
         display: flex;
         flex-direction: row;
+        align-items: center;
         gap: 70px;
     }
         .logo-header{
-            height: 100%;
+            height: 80%;
             }
         .datum-header{
             display:flex;
