--- a/CSS-Stylesheet-Line-up-Tickets.css
+++ b/CSS-Stylesheet-Line-up-Tickets.css
@@ -4,8 +4,9 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
+    gap: 3vw;
+    align-items: stretch;
+    flex-wrap: nowrap;
     }
 
     .plakat-line-up{
@@ -17,15 +18,13 @@
     .tickets-container{
         border-radius: 10px;
         width: 22.5vw;
-        min-height: 64vh;
         background-color: #7400BE;
         display: flex;
         flex-direction: column;
         align-items: flex-start;
         justify-content: center;
-        padding: 2vh 2.5vw 0 3vw;
+        padding: 0 2.5vw 0 3vw;
         box-sizing: border-box;
-        margin-left: 5vw;
     }
     .preis-und-button{
         display: flex;
@@ -57,23 +56,34 @@
             scroll-margin-top: 30vh;
         }
 
-        @media(max-width:1900px){
-            .plakat-line-up, .tickets-container{
-                width: 50vw;
-                min-height: 0;
-                height: auto;
+        @media(max-width:1000px){
+            .plakat-line-up{
+                min-height: 50vh;
+                max-height: 70vh;
+                width: auto;
+                max-width: 80vw;
+                margin-right: 0;
+            }
+            .tickets-container{
                 margin: 4vh;
             }
             .tickets-container{
-                margin-top: 0;
                 padding-bottom: 2vh;
+            }
+            .line-up-tickets{
+                flex-direction: column;
+                align-items: center;
+                justify-content: center;
             }
             #Tickets{
                 scroll-margin-top: 20vh;
             }
         }
         @media(max-width:500px){
-            .tickets-container, .plakat-line-up{
-                width: 65vw;
+            .tickets-container{
+            }
+            .plakat-line-up{
+                width: auto;
+                min-height:auto;
             }
         }
