--- a/CSS-Stylesheet-Startseite.css
+++ b/CSS-Stylesheet-Startseite.css
@@ -14,17 +14,18 @@ header {
     justify-content: space-between;
     align-items: center;
     flex-wrap: wrap;
-    gap: 2vw;
+    gap: 1.7vw;
     z-index: 100;
     }
     .logo-und-datum{
         display: flex;
         flex-direction: row;
         align-items: center;
-        gap: 70px;
+        gap: 1vw;
     }
         .logo-header{
-            height: 80%;
+            height: 100%;
+            max-height: 15vh;
             }
         .datum-header{
             display:flex;
@@ -34,12 +35,12 @@ header {
             }
             .datum-header-jahr{
                 color: #7400BE;            
-                font-size: 3rem;
+                font-size: 2.7rem;
                 line-height: 1;
                 }
             .datum-header-tag{
                 color: #7400BE;
-                font-size:2rem ;
+                font-size:1.8rem ;
                 line-height: 0.85;
                 }
     .menü-elemente{
@@ -103,7 +104,7 @@ header {
         display: none;
     }
 
-    @media(max-width: 1900px){
+    @media(max-width: 1764px){
         .menü-elemente{
             display: none;
         }
@@ -112,8 +113,10 @@ header {
         }
     @media(max-width: 1500px){
        .logo-header{
+        max-height: 15vh;
         width: 45vw;
         max-width: 400px;
+        }
        }
         .datum-header-jahr{
         font-size: clamp(5px, 5vw, 100px);
@@ -143,7 +146,7 @@ header {
             width: 80vw;
         }
     }
-    }
+    
 
 .startseite {
     min-height: 80vh;
