--- a/CSS-Stylesheet-Bands.css
+++ b/CSS-Stylesheet-Bands.css
@@ -28,11 +28,12 @@
         .bandname{
             font-size: clamp(1.3rem, 2.5vw, 2.5rem);
             text-align: center;
+            text-decoration: none;
         }
         .bandname-zulang{
             font-size: clamp(1rem, 2vw, 2.3rem);
-            
             text-align: center;
+            text-decoration: none;
         }
         .band-foto{
             border: #F5BD00;
